# triceratops

./: .env.example  .gitignore  BUILDING.md  Cargo.toml  TODO.md  Triceratops.paw  biome.json  bun.lockb  config.complete.toml  config.example.toml  docker-compose.yml  dockerfile  justfile  package.json  pnpm-lock.yaml  turbo.json
apps/documentation/: astro.config.mjs  bun.lockb  package.json
apps/frontend/: package.json
apps/panel/: .eslintrc.cjs  README.md  bun.lockb  next.config.js  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json
apps/panel-next/: next.config.js  package.json  tailwind.config.ts
apps/panel-next/src/app/: layout.tsx
apps/panel-next/src/app/dashboard/: page.tsx
apps/panel-next/src/app/login/: page.tsx
apps/panel-next/src/app/logout/: page.tsx
apps/panel-next/src/app/register/: page.tsx
apps/panel-next/src/components/: Logo.tsx
apps/panel-next/src/components/Dashboard/Sidebar/: index.tsx
apps/panel-next/src/components/Elements/Forms/: PasswordInput.tsx  TextInput.tsx
apps/panel-next/src/components/Login/: LoginContainer.tsx
apps/panel-next/src/components/Register/: RegisterContainer.tsx
apps/panel-next/src/lib/: auth.ts
apps/panel-svelte/: package.json  svelte.config.js
apps/panel-svelte/src/lib/components/: LoginComponent.svelte
apps/panel-svelte/src/routes/login/: +page.svelte
apps/panel-svelte/src/routes/register/: +page.svelte
apps/panel-svelte/src/routes/users/: +page.svelte  +page.ts
apps/panel-svelte/src/routes/users/[id]/: +page.ts
apps/panel/locales/: en.json
apps/panel/src/: i18n.ts  middleware.ts  page.types.ts
apps/panel/src/app/: global.css  layout.tsx  page.tsx  page.types.ts
apps/panel/src/app/[locale]/: layout.tsx  page.tsx
apps/panel/src/app/[locale]/login/: page.tsx
apps/panel/src/app/dashboard/: page.tsx
apps/panel/src/app/login/: page.tsx
apps/panel/src/components/Elements/Forms/: PasswordInput.tsx  Submit.tsx  TextInput.tsx
apps/panel/src/components/Login/: LoginContainer.tsx  Triceratops.tsx
apps/panel/src/components/Register/: RegisterContainer.tsx
apps/panel/src/lib/components/: LoginComponent.svelte  RegisterComponent.svelte
apps/panel/src/routes/: +layout.svelte
apps/panel/src/routes/login/: +page.server.ts  +page.svelte  +page.ts
apps/panel/src/routes/logout/: +page.server.ts
apps/panel/src/routes/register/: +page.server.ts  +page.svelte
apps/panel/src/routes/users/[id]/: +page.svelte  +page.ts
crates/daemon/: Cargo.toml  build.rs
crates/server/: Cargo.toml
crates/triceratops-auth/: Cargo.toml
crates/triceratops-auth/src/: lib.rs
crates/triceratops-entity/: Cargo.toml
crates/triceratops-entity/src/: collections.rs  connections.rs  lib.rs  locations.rs  nodes.rs  sessions.rs
crates/triceratops-migration/: Cargo.toml
crates/triceratops-migration/src/: lib.rs  m20231120_235338_create_users.rs  m20231122_135619_create_locations.rs  m20231124_171550_create_containers.rs
crates/triceratops-oauth/: Cargo.toml
crates/triceratops-oauth/src/: lib.rs
crates/triceratops-oauth/src/providers/: mod.rs
crates/triceratops-server/: Cargo.toml
crates/triceratops-server/src/config/: debug.rs  mod.rs  web_server.rs
crates/triceratops-server/src/config/auth/: saml.rs
crates/triceratops-server/src/state/: mod.rs
crates/triceratops-server/src/state/oauth/: google.rs  microsoft.rs  mod.rs  okta.rs
crates/triceratops-server/src/utils/oauth/: mod.rs
crates/triceratops-server/src/web_server/: error.rs  mod.rs
crates/triceratops-server/src/web_server/middleware/: authenticated.rs  mod.rs
crates/triceratops-server/src/web_server/routes/: mod.rs
crates/webserver/: Cargo.toml  docker.env
crates/webserver/entity/: Cargo.toml  command.md
crates/webserver/entity/src/: containers.rs  eggs.rs  lib.rs  locations.rs  nests.rs  nodes.rs  prelude.rs  servers.rs  sessions.rs  users.rs
crates/webserver/migration/: Cargo.toml
crates/webserver/migration/src/: lib.rs  m20231120_235338_create_user.rs  m20231120_235338_create_users.rs  m20231122_003448_create_nodes.rs  m20231122_004821_create_servers.rs  m20231124_171543_create_collections.rs  m20231124_171543_create_nests.rs  m20231124_171550_create_eggs.rs  m20231124_210436_create_location_foreign_key.rs  m20231126_145310_create_sessions.rs  m20231127_015403_create_connections.rs
crates/webserver/src/: main.rs  state.rs  web_server.rs
crates/webserver/src/config/: mod.rs  postgres.rs  redis.rs  web_server.rs
crates/webserver/src/config/auth/: mod.rs  saml.rs
crates/webserver/src/config/auth/oauth/: custom.rs  discord.rs  google.rs  microsoft.rs  mod.rs  okta.rs  whmcs.rs
crates/webserver/src/routes/: mod.rs
crates/webserver/src/routes/servers/: mod.rs  server.rs  servers.rs
crates/webserver/src/state/: database.rs  geo_ip.rs  mod.rs  redis.rs
crates/webserver/src/state/oauth/: azure.rs  custom.rs  discord.rs  microsoft.rs  mod.rs
crates/webserver/src/utils/oauth/: error.rs  mod.rs
crates/webserver/src/web_server/: error.rs  mod.rs  state.rs
crates/webserver/src/web_server/middleware/: authenticated.rs  authentication.rs  mod.rs  rate_limit.rs  unauthenticated.rs
crates/webserver/src/web_server/middleware/example/: mod.rs
crates/webserver/src/web_server/routes/: api.rs  mod.rs  spa.rs
crates/webserver/src/web_server/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
crates/webserver/src/web_server/routes/auth/ldap/: mod.rs
crates/webserver/src/web_server/routes/auth/oauth/: callback.rs  mod.rs  redirect.rs  services.rs
crates/webserver/src/web_server/routes/auth/oauth/discord/: callback.rs  mod.rs  redirect.rs
crates/webserver/src/web_server/routes/auth/oauth/microsoft/: callback.rs  redirect.rs
crates/webserver/src/web_server/routes/servers/: mod.rs  server.rs  servers.rs
crates/webserver/src/web_server/routes/users/: me.rs  mod.rs  user.rs  users.rs
crates/webserver/src/web_server/state/: database.rs  mod.rs
crates/webserver/src/web_server/state/oauth/: discord.rs  mod.rs
proto/: admin.proto  server.proto  triceratops.proto  user.proto
(+26 files in other folders)
