[workspace]
default-members = ["crates/daemon", "crates/webserver"]
members = [
    "crates/daemon",
    "crates/webserver",
    "crates/webserver/entity",
    "crates/webserver/migration",
]
resolver = "2"

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
strip         = true
