[workspace]
default-members = ["crates/triceratops-daemon", "crates/triceratops-server"]
members = [
    "crates/triceratops-auth",
    "crates/triceratops-daemon",
    "crates/triceratops-entity",
    "crates/triceratops-migration",
    "crates/triceratops-oauth",
    "crates/triceratops-server",
]
resolver = "2"

[workspace.dependencies]
triceratops-entity    = { path = "./crates/triceratops-entity" }
triceratops-migration = { path = "./crates/triceratops-migration" }

argon2             = "0.5.3"
axum               = "0.7.5"
axum-extra         = "0.9.3"
base16ct           = "0.2.0"
chrono             = "0.4.35"
clap               = "4.5.3"
cuid2              = "0.1.2"
error-stack        = "0.4.1"
fred               = "8.0.6"
hyper              = "1.2.0"
jsonwebtoken       = "9.3.0"
oauth2             = "4.4.2"
pin-project        = "1.1.5"
rand               = "0.8.5"
rand_core          = "0.6.4"
regex              = "1.10.4"
reqwest            = "0.12.3"
sea-orm            = "0.12.15"
serde              = "1.0.197"
serde_json         = "1.0.115"
sha2               = "0.10.8"
tokio              = "1.37.0"
toml               = "0.8.8"
tower              = "0.4.13"
tower-http         = "0.5.2"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
url                = "2.5.0"
validator          = "0.17.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
strip         = true
