[package]
edition = "2021"
name    = "triceratops-server"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
triceratops-server-entity    = { path = "./entity" }
triceratops-server-migration = { path = "./migration" }

argon2 = { workspace = true, features = ["std", "zeroize"] }
axum = { workspace = true, features = ["http2", "ws"] }
axum-extra = { workspace = true, features = ["cookie", "typed-header"] }
base16ct = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
cuid2 = { workspace = true }
error-stack = { workspace = true, features = ["serde", "spantrace"] }
fred = { workspace = true, features = ["enable-native-tls", "enable-rustls"] }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true, features = ["serde"] }
rand_core = { workspace = true, features = ["serde", "std"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
sea-orm = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "tracing",
] }
toml = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "fs"] }
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber = { workspace = true, features = ["chrono", "serde"] }
url = { workspace = true, features = ["serde"] }
validator = { workspace = true, features = ["derive"] }
